--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -34,6 +34,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                         <input type="text" name="email" class="form-control"/>
                                     </div>
                                     <div class="mb-3">
+                                        <label>Telefone: </label>
+                                        <input type="number" name="mobileNumber" class="form-control"/>
+                                    </div>
+                                    <div class="mb-3">
                                         <label>Endereço: </label>
                                         <input type="text" name="endereco" class="form-control"/>
                                     </div>
