--- a/src/main/resources/templates/forgot_password.html
+++ b/src/main/resources/templates/forgot_password.html
@@ -8,48 +8,38 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     </head>
     <body>
-
         <section>
             <div class="container p-5">
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
                         <div class="card">
                             <div class="card-header text-center fs-4">
-                                Login Page
+                                Forgot Password
                             </div>
+                            <th:block th:if="${session.msg}">
+                                <p class="text-center text-success">[[${session.msg}]]</p>
+                                <th:block th:text="${#session.removeAttribute('msg')}"></th:block>
+                            </th:block>
+                            
                             <div class="card-body">
-                                <div th:if="${param.error}" class="alert alert-danger">
-                                    Usuário ou senha inválidos!
-                                </div>
-
-                                <div th:if="${param.logout}" class="alert alert-success">
-                                    Logout efetuado com sucesso!
-                                </div>
-                                <form action="/login" method="post">
+                                <form action="/forgotPassword" method="post">
                                     <div class="mb-3">
                                         <label>Enter email </label>
-                                        <input type="text" name="username" class="form-control"/>
+                                        <input type="text" name="email" class="form-control"/>
                                     </div>
                                     <div class="mb-3">
-                                        <label>Senha </label>
-                                        <input type="text" name="password" class="form-control"/>
+                                        <label>Enter Mobile Number </label>
+                                        <input type="text" name="mobileNumber" class="form-control"/>
                                     </div>
-                                    <button class="btn btn-dark col-md-12">Login</button>
+                                    <button class="btn btn-dark col-md-12">Reset Password</button>
                                 </form>   
-                                <br>
-                                <div class="text-center">
-                                    <a href="loadForgotPassword" class="text-decoration-none">Esqueci minha senha</a>
-                                </div>
-                                
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
     </body>
 </html>
